--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -12,6 +12,6 @@
   </ion-header>
 
   <!-- ✅ Use the LoginComponent here -->
-  <app-login></app-login>
+  <app-login-component></app-login-component>
 
 </ion-content>
