--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -1,13 +1,9 @@
-<h2>Register</h2>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Register</ion-title>
+  </ion-toolbar>
+</ion-header>
 
-<div class="register-container">
-  <form (ngSubmit)="register()">
-    <label>Email:</label>
-    <input type="email" [(ngModel)]="email" name="email" required />
-
-    <label>Password:</label>
-    <input type="password" [(ngModel)]="password" name="password" required />
-
-    <button type="submit">Register</button>
-  </form>
-</div>
+<ion-content>
+  <app-register></app-register> <!-- ✅ Ensure this component is used -->
+</ion-content>
